metrique-macro/src/snapshots/metrique_macro__tests__subfield_struct.snap
---
source: metrique-macro/src/lib.rs
assertion_line: 2154
expression: parsed_file
---
struct NestedMetrics {
    counter: u32,
}
#[doc(hidden)]
#[allow(clippy::type_complexity)]
pub struct NestedMetricsEntry {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    counter: <u32 as metrique::CloseValue>::Closed,
}
const _: () = {
    impl NestedMetricsEntry {
        #[doc(hidden)]
        #[inline(always)]
        fn __metrique_descriptor_run_0() -> &'static ::metrique::writer::core::EntryDescriptor {
            {
                static __METRIQUE__FLAGS_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__SKIPPED_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__FIELDS: [::metrique::writer::core::FieldDescriptor; 1usize] = [
                    ::metrique::writer::core::FieldDescriptor::builder("counter")
                        .pascal("Counter")
                        .snake("counter")
                        .kebab("counter")
                        .screaming_snake("COUNTER")
                        .flags(&__METRIQUE__FLAGS_0)
                        .skipped_flags(&__METRIQUE__SKIPPED_0)
                        .maybe_unit(
                            ::metrique::writer::core::Unit::to_option(
                                <<u32 as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::UNIT,
                            ),
                        )
                        .shape(
                            <<u32 as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::SHAPE,
                        )
                        .build(),
                ];
                static __METRIQUE__DESC: ::metrique::writer::core::EntryDescriptor = ::metrique::writer::core::EntryDescriptor::builder(
                        "NestedMetrics",
                        &__METRIQUE__FIELDS,
                    )
                    .maybe_timestamp(None)
                    .build();
                &__METRIQUE__DESC
            }
        }
    }
    #[expect(deprecated)]
    impl<NS: ::metrique::NameStyle> ::metrique::InflectableEntry<NS>
    for NestedMetricsEntry {
        fn write<'__metrique_write>(
            &'__metrique_write self,
            writer: &mut impl ::metrique::writer::EntryWriter<'__metrique_write>,
        ) {
            let __metrique_self = self;
            ::metrique::writer::EntryWriter::value(
                writer,
                {
                    struct CounterPreserve;
                    impl ::metrique::concat::ConstStr for CounterPreserve {
                        const VAL: &'static str = "counter";
                    }
                    struct CounterKebab;
                    impl ::metrique::concat::ConstStr for CounterKebab {
                        const VAL: &'static str = "counter";
                    }
                    struct CounterPascal;
                    impl ::metrique::concat::ConstStr for CounterPascal {
                        const VAL: &'static str = "Counter";
                    }
                    struct CounterSnake;
                    impl ::metrique::concat::ConstStr for CounterSnake {
                        const VAL: &'static str = "counter";
                    }
                    ::metrique::concat::const_str_value::<
                        <NS as ::metrique::NameStyle>::Inflect<
                            CounterPreserve,
                            CounterPascal,
                            CounterSnake,
                            CounterKebab,
                        >,
                    >()
                },
                &__metrique_self.counter,
            );
        }
        fn sample_group(
            &self,
        ) -> impl ::std::iter::Iterator<
            Item = (::std::borrow::Cow<'static, str>, ::std::borrow::Cow<'static, str>),
        > {
            let __metrique_self = self;
            ::std::iter::empty()
        }
        fn descriptors(&self) -> ::metrique::writer::core::Descriptors<'_> {
            ::metrique::writer::core::Descriptors::available(
                ::std::iter::once(
                    ::metrique::writer::core::DescriptorRef::from_static(
                        NestedMetricsEntry::__metrique_descriptor_run_0(),
                        <NS as ::metrique::NameStyle>::DESCRIPTOR_STYLE_INDEX,
                    ),
                ),
            )
        }
    }
};
impl ::metrique::writer::value::ObjectValue for NestedMetricsEntry {
    fn write_object<'__a>(
        &'__a self,
        writer: &mut impl ::metrique::writer::EntryWriter<'__a>,
    ) {
        <Self as ::metrique::InflectableEntry<
            ::metrique::Identity,
        >>::write(self, writer);
    }
}
impl metrique::CloseValue for &'_ NestedMetrics {
    type Closed = NestedMetricsEntry;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        NestedMetricsEntry {
            counter: metrique::CloseValue::close(&__metrique_self_expr!().counter),
        }
    }
}
impl metrique::CloseValue for NestedMetrics {
    type Closed = NestedMetricsEntry;
    fn close(self) -> Self::Closed {
        <&Self>::close(&self)
    }
}
